welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: type mismatch;
 found   : Boolean(false)
 required: Int
	var bool:Int = false;
                       ^arrayFront9:8: error: type mismatch;
 found   : Boolean(true)
 required: Int
		if (nums(i) == 9) bool = true;
                                         ^arrayFront9:11: error: type mismatch;
 found   : Int
 required: Boolean
	return bool;
               ^