welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {

	var taille:Int = Math.min(4, nums.length);
	var bool:Int = false;

	for (i <- 1 to taille)
	{
		if (nums(i) == 9) bool = true;
	}

	return bool;
}
